--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,11 @@
     "extensions": [
         "julialang.language-julia",
         "ms-vscode.cpptools",
+        "twxs.cmake",
         "ms-vscode.cmake-tools"
     ],
-    "dockerFile": "Dockerfile"
+    "dockerFile": "Dockerfile",
+    "runArgs": [
+        "--privileged"
+    ]
 }
