modifying cmakelist to create a jl_richdem shared library.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,6 @@
     ],
     "dockerFile": "Dockerfile",
     "runArgs": [
-        "--privileged"
+        // "--privileged" //this is to allow to run BinaryBuilder inside the container
     ]
 }
