--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.9)
 
 project(richdem
-  VERSION 2.2.11
+  VERSION 2.3.1
   DESCRIPTION "High-performance terrain analysis"
   LANGUAGES CXX
 )
@@ -49,6 +49,9 @@ add_library(richdem
   src/terrain_generation/PerlinNoise.cpp
 )
 
+add_library(jl_richdem
+  src/jl_richdem/common/jl_Array2D.cpp)
+
 # set_target_properties(richdem PROPERTIES VERSION ${PROJECT_VERSION})
 # set_target_properties(richdem PROPERTIES SOVERSION 2)
 target_include_directories(richdem
@@ -62,6 +65,8 @@ target_compile_features(richdem
   cxx_auto_type
   cxx_std_17
 )
+
+target_compile_features(jl_richdem PUBLIC cxx_auto_type cxx_std_17)
 
 if(OpenMP_CXX_FOUND)
   target_link_libraries(richdem PUBLIC OpenMP::OpenMP_CXX)
@@ -100,11 +105,11 @@ if(JlCxx_FOUND)
   get_filename_component(JlCxx_location ${JlCxx_location} DIRECTORY)
   set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib;${JlCxx_location}")
 
-  target_link_libraries(richdem PUBLIC JlCxx::cxxwrap_julia JlCxx::cxxwrap_julia_stl)
+  target_link_libraries(jl_richdem PUBLIC JlCxx::cxxwrap_julia JlCxx::cxxwrap_julia_stl)
 else()
   message(FATAL_ERROR "JlCxx library not found. RichDEM cannot be compiled to link with julia")
 endif()
-
+target_link_libraries(jl_richdem PRIVATE richdem)
 
 add_executable(richdem_unittests
   tests/tests.cpp
@@ -120,4 +125,12 @@ install(
   ARCHIVE DESTINATION "lib"
   RUNTIME DESTINATION "bin"
 )
+
+install(
+  TARGETS jl_richdem
+  LIBRARY DESTINATION "lib"
+  ARCHIVE DESTINATION "lib"
+  RUNTIME DESTINATION "bin"
+)
+
 install(DIRECTORY include/richdem DESTINATION include)
