Adding files to create the Julia module.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ set(CMAKE_MACOSX_RPATH 1)
 set(BUILD_SHARED_LIBS ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
+
 
 
 add_subdirectory(apps)
@@ -49,8 +51,8 @@ add_library(richdem
   src/terrain_generation/PerlinNoise.cpp
 )
 
-add_library(jl_richdem
-  src/jl_richdem/common/jl_Array2D.cpp)
+add_library(jlrichdem
+  src/jlrichdem/common/jlArray2D.cpp)
 
 # set_target_properties(richdem PROPERTIES VERSION ${PROJECT_VERSION})
 # set_target_properties(richdem PROPERTIES SOVERSION 2)
@@ -66,7 +68,7 @@ target_compile_features(richdem
   cxx_std_17
 )
 
-target_compile_features(jl_richdem PUBLIC cxx_auto_type cxx_std_17)
+target_compile_features(jlrichdem PUBLIC cxx_auto_type cxx_std_17)
 
 if(OpenMP_CXX_FOUND)
   target_link_libraries(richdem PUBLIC OpenMP::OpenMP_CXX)
@@ -100,16 +102,15 @@ endif()
 
 
 if(JlCxx_FOUND)
-  message(STATUS "Compiling RichDEM with JlCxx.")
+  message(STATUS "Compiling jlRichDEM with JlCxx.")
   get_target_property(JlCxx_location JlCxx::cxxwrap_julia LOCATION)
   get_filename_component(JlCxx_location ${JlCxx_location} DIRECTORY)
   set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib;${JlCxx_location}")
-
-  target_link_libraries(jl_richdem PUBLIC JlCxx::cxxwrap_julia JlCxx::cxxwrap_julia_stl)
+  target_link_libraries(jlrichdem PUBLIC JlCxx::cxxwrap_julia JlCxx::cxxwrap_julia_stl)
 else()
   message(FATAL_ERROR "JlCxx library not found. RichDEM cannot be compiled to link with julia")
 endif()
-target_link_libraries(jl_richdem PRIVATE richdem)
+target_link_libraries(jlrichdem PRIVATE richdem)
 
 add_executable(richdem_unittests
   tests/tests.cpp
@@ -127,7 +128,7 @@ install(
 )
 
 install(
-  TARGETS jl_richdem
+  TARGETS jlrichdem
   LIBRARY DESTINATION "lib"
   ARCHIVE DESTINATION "lib"
   RUNTIME DESTINATION "bin"
