Adds the second type of constructor for Array2D.

--- a/julia/richdem/Project.toml
+++ b/julia/richdem/Project.toml
@@ -5,3 +5,4 @@ version = "0.1.0"
 
 [deps]
 CxxWrap = "1f15a43c-97ca-5a2a-ae31-89f07a497df4"
+libcxxwrap_julia_jll = "3eaa8342-bff7-56a5-9981-c04077f7cee7"
