Wraps GetDepressionHierarchy method and moves the julia code to wrappers/RichDEM.jl

--- a/wrappers/RichDEM.jl/Project.toml
+++ b/wrappers/RichDEM.jl/Project.toml
@@ -1,4 +1,4 @@
-name = "richdem"
+name = "RichDEM"
 uuid = "db566695-6f60-45f3-9b37-d3ff769e9aca"
 authors = ["Sunayana Ghosh <sunayana@cervest.earth>"]
 version = "0.1.0"
