--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,8 @@ add_library(richdem
 
 add_library(jlrichdem
   src/jlrichdem/common/jlcommon.cpp
-  src/jlrichdem/misc/jlmisc.cpp)
+  src/jlrichdem/misc/jlmisc.cpp
+  src/jlrichdem/depressions/jldepressions.cpp)
 
 # set_target_properties(richdem PROPERTIES VERSION ${PROJECT_VERSION})
 # set_target_properties(richdem PROPERTIES SOVERSION 2)
