--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,6 @@
     ],
     "dockerFile": "Dockerfile",
     "runArgs": [
-        // "--privileged" //this is to allow to run BinaryBuilder inside the container
+        "--privileged" //this is to allow to run BinaryBuilder inside the container
     ]
 }
