mainly changing function argument type so that runoff of type float can be handled. In the C++ fill spill merge it was always a double.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,12 @@
         "ms-vscode.cmake-tools"
     ],
     "dockerFile": "Dockerfile",
+    "build": {
+        "args": {
+            "BUILDKIT_INLINE_CACHE": "0"
+        }
+    },
     "runArgs": [
-        "--privileged" //this is to allow to run BinaryBuilder inside the container
+        "--privileged" //this is to allow to run BinaryBuilder inside the container 
     ]
 }
