--- a/wrappers/RichDEM.jl/Project.toml
+++ b/wrappers/RichDEM.jl/Project.toml
@@ -13,6 +13,7 @@ libcxxwrap_julia_jll = "3eaa8342-bff7-56a5-9981-c04077f7cee7"
 CxxWrap = "0.13"
 julia = "=1.6.3, 1.7, 1.8, 1.9, 1.10"
 libcxxwrap_julia_jll = "0.9.3"
+RichDEM_jll = "2.3.2"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
